--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="bg-white">
       <nav class="h-10"></nav>
     </header>
-    <main>
+    <main class="mx-9">
       <section class="grid grid-cols-2 place-items-center w-full">
         <form class="w-full">
           <div class="flex items-center justify-center">
@@ -117,42 +117,43 @@
       </section>
 
       <!-- Tabla  -->
-      <section class="flex flex-col mx-9">
-        <div class="text-sm">
-          <button class="h-8 bg-blue-800 rounded-t-md w-32 text-white">
-            Cobrar
-          </button>
-          <button
-            class="h-8 bg-gray-200 border-2 border-x-blue-800 border-t-blue-800 text-blue-800 rounded-t-md w-32"
-          >
-            Servicios
-          </button>
-          <button
-            class="h-8 bg-gray-200 border-2 border-x-blue-800 text-blue-800 border-t-blue-800 rounded-t-md w-32"
-          >
-            Histórico de Pagos
-          </button>
-        </div>
-        <div class="rounded-xl border text-sm">
-          <table
-            class="border-separate border-spacing-1 text-center overflow-auto w-full whitespace-nowrap text-sm"
-          >
-            <thead class="">
-              <tr class="bg-gray-200 h-10 divide-x overflow-auto">
-                <th class="px-2 font-medium">Factura</th>
-                <th class="px-2 font-medium">Contrato</th>
-                <th class="px-2 font-medium">Plan</th>
-                <th class="px-2 font-medium">PON</th>
-                <th class="px-2 font-medium">Dirección</th>
-                <th class="px-2 font-medium">Estatus</th>
-                <th class="px-2 font-medium">Fecha Emisión</th>
-                <th class="px-2 font-medium">Cuentas por Cobrar</th>
-                <th class="px-2 font-medium">Crédito</th>
-                <th class="px-2 font-medium">Total</th>
-              </tr>
-            </thead>
-            <tbody class="overflow-auto divide-y">
-              <tr class="hover:bg-gray-200">
+      <section class="inline-flex w-full space-x-4">
+        <div class="flex flex-col w-full">
+          <div class="text-sm">
+            <button class="h-8 bg-blue-800 rounded-t-md w-32 text-white">
+              Cobrar
+            </button>
+            <button
+              class="h-8 bg-gray-200 border-2 border-x-blue-800 border-t-blue-800 text-blue-800 rounded-t-md w-32"
+            >
+              Servicios
+            </button>
+            <button
+              class="h-8 bg-gray-200 border-2 border-x-blue-800 text-blue-800 border-t-blue-800 rounded-t-md w-32"
+            >
+              Histórico de Pagos
+            </button>
+          </div>
+          <div class="rounded-xl border text-sm">
+            <table
+              class="border-separate border-spacing-1 text-center overflow-auto w-full whitespace-nowrap text-sm"
+            >
+              <thead class="">
+                <tr class="bg-gray-200 h-10 divide-x overflow-auto">
+                  <th class="px-2 font-medium">Factura</th>
+                  <th class="px-2 font-medium">Contrato</th>
+                  <th class="px-2 font-medium">Plan</th>
+                  <th class="px-2 font-medium">PON</th>
+                  <th class="px-2 font-medium">Dirección</th>
+                  <th class="px-2 font-medium">Estatus</th>
+                  <th class="px-2 font-medium">Fecha Emisión</th>
+                  <th class="px-2 font-medium">Cuentas por Cobrar</th>
+                  <th class="px-2 font-medium">Crédito</th>
+                  <th class="px-2 font-medium">Total</th>
+                </tr>
+              </thead>
+              <tbody class="overflow-auto divide-y">
+                <!--               <tr class="hover:bg-gray-200">
                 <td>0007542</td>
                 <td>000784</td>
                 <td>50M</td>
@@ -182,107 +183,103 @@
                     <p>Bs. 100.00</p>
                   </div>
                 </td>
-              </tr>
-              <tr class="hover:bg-gray-200">
-                <td>0007542</td>
-                <td>000784</td>
-                <td>50M</td>
-                <td>12452355</td>
-                <td>Calle 68 entre av 17 y 18...</td>
-                <td>
-                  <span class="bg-green-700 rounded-full p-2 px-5 text-white"
-                    >Habilitado</span
-                  >
-                </td>
-                <td>16/11/2021</td>
-                <td>
-                  <div>
-                    <p>US$25</p>
-                    <p>Bs. 125.00</p>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                    <p>US$5</p>
-                    <p>Bs. 25.00</p>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                    <p>US$20</p>
-                    <p>Bs. 100.00</p>
-                  </div>
-                </td>
-              </tr>
-              <tr class="hover:bg-gray-200">
-                <td>0007542</td>
-                <td>000784</td>
-                <td>50M</td>
-                <td>12452355</td>
-                <td>Calle 68 entre av 17 y 18...</td>
-                <td>
-                  <span class="bg-green-700 rounded-full p-2 px-5 text-white"
-                    >Habilitado</span
-                  >
-                </td>
-                <td>16/11/2021</td>
-                <td>
-                  <div>
-                    <p>US$25</p>
-                    <p>Bs. 125.00</p>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                    <p>US$5</p>
-                    <p>Bs. 25.00</p>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                    <p>US$20</p>
-                    <p>Bs. 100.00</p>
-                  </div>
-                </td>
-              </tr>
-              <tr class="hover:bg-gray-200">
-                <td>0007542</td>
-                <td>000784</td>
-                <td>50M</td>
-                <td>12452355</td>
-                <td>Calle 68 entre av 17 y 18...</td>
-                <td>
-                  <span class="bg-green-700 rounded-full p-2 px-5 text-white"
-                    >Habilitado</span
-                  >
-                </td>
-                <td>16/11/2021</td>
-                <td>
-                  <div>
-                    <p>US$25</p>
-                    <p>Bs. 125.00</p>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                    <p>US$5</p>
-                    <p>Bs. 25.00</p>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                    <p>US$20</p>
-                    <p>Bs. 100.00</p>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-
-      <section class="flex flex-col mx-9 my-2">
-        <div class="flex">
+              </tr> -->
+                <tr class="hover:bg-gray-200">
+                  <td>0007542</td>
+                  <td>000784</td>
+                  <td>50M</td>
+                  <td>12452355</td>
+                  <td>Calle 68 entre av 17 y 18...</td>
+                  <td>
+                    <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                      >Habilitado</span
+                    >
+                  </td>
+                  <td>16/11/2021</td>
+                  <td>
+                    <div>
+                      <p>US$25</p>
+                      <p>Bs. 125.00</p>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <p>US$5</p>
+                      <p>Bs. 25.00</p>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <p>US$20</p>
+                      <p>Bs. 100.00</p>
+                    </div>
+                  </td>
+                </tr>
+                <tr class="hover:bg-gray-200">
+                  <td>0007542</td>
+                  <td>000784</td>
+                  <td>50M</td>
+                  <td>12452355</td>
+                  <td>Calle 68 entre av 17 y 18...</td>
+                  <td>
+                    <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                      >Habilitado</span
+                    >
+                  </td>
+                  <td>16/11/2021</td>
+                  <td>
+                    <div>
+                      <p>US$25</p>
+                      <p>Bs. 125.00</p>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <p>US$5</p>
+                      <p>Bs. 25.00</p>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <p>US$20</p>
+                      <p>Bs. 100.00</p>
+                    </div>
+                  </td>
+                </tr>
+                <tr class="hover:bg-gray-200">
+                  <td>0007542</td>
+                  <td>000784</td>
+                  <td>50M</td>
+                  <td>12452355</td>
+                  <td>Calle 68 entre av 17 y 18...</td>
+                  <td>
+                    <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                      >Habilitado</span
+                    >
+                  </td>
+                  <td>16/11/2021</td>
+                  <td>
+                    <div>
+                      <p>US$25</p>
+                      <p>Bs. 125.00</p>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <p>US$5</p>
+                      <p>Bs. 25.00</p>
+                    </div>
+                  </td>
+                  <td>
+                    <div>
+                      <p>US$20</p>
+                      <p>Bs. 100.00</p>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <div class="flex flex-col">
             <form
               class="flex items-start space-x-4 bg-white w-fit px-4 py-3 rounded-3xl"
@@ -402,7 +399,7 @@
                   </tr>
                 </thead>
                 <tbody class="overflow-auto divide-y">
-                  <tr class="hover:bg-gray-200">
+                  <!--                   <tr class="hover:bg-gray-200">
                     <td>0007542</td>
                     <td>000784</td>
                     <td>50M</td>
@@ -463,7 +460,7 @@
                         <p>Bs. 100.00</p>
                       </div>
                     </td>
-                  </tr>
+                  </tr> -->
                   <tr class="hover:bg-gray-200">
                     <td>0007542</td>
                     <td>000784</td>
@@ -471,7 +468,8 @@
                     <td>12452355</td>
                     <td>Calle 68 entre av 17 y 18...</td>
                     <td>
-                      <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                      <span
+                        class="bg-green-700 rounded-full p-2 px-5 text-white"
                         >Habilitado</span
                       >
                     </td>
@@ -502,7 +500,8 @@
                     <td>12452355</td>
                     <td>Calle 68 entre av 17 y 18...</td>
                     <td>
-                      <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                      <span
+                        class="bg-green-700 rounded-full p-2 px-5 text-white"
                         >Habilitado</span
                       >
                     </td>
@@ -530,59 +529,60 @@
               </table>
             </div>
           </div>
-          <div class="inline-flex ml-5 h-max">
-            <div
-              class="grid grid-flow-col auto-cols-max border border-gray-500 rounded-lg"
-            >
-              <div class="">
-                <div
-                  class="flex flex-col h-full p-2 rounded-lg hover:bg-white transition-colors"
-                >
-                  <img
-                    class="w-10 h-auto"
-                    src="./assets/svg/icon-pago.svg"
-                    alt="Icono de pago azul"
-                  />
-                  <p class="font-bold text-md">Deuda:</p>
-                  <p class="font-medium">25$</p>
-                  <p>150,00 Bs</p>
-                </div>
+        </div>
+        <div class="inline-flex  h-max">
+          <div
+            class="grid grid-flow-row auto-rows-max border border-gray-500 rounded-lg"
+          >
+            <div class="">
+              <div
+                class="flex flex-col h-full p-2 rounded-lg hover:bg-white transition-colors"
+              >
+                <img
+                  class="w-10 h-auto"
+                  src="./assets/svg/icon-pago.svg"
+                  alt="Icono de pago azul"
+                />
+                <p class="font-bold text-md">Deuda:</p>
+                <p class="font-medium">25$</p>
+                <p>150,00 Bs</p>
               </div>
-              <div>
-                <div
-                  class="flex flex-col h-full p-2 hover:bg-white transition-colors"
-                >
-                  <img
-                    class="w-10 h-auto"
-                    src="./assets/svg/icon-pago.svg"
-                    alt="Icono de pago azul"
-                  />
-                  <p class="font-bold text-md">Saldo a favor:</p>
-                  <p class="font-medium">25$</p>
-                  <p>150,00 Bs</p>
-                </div>
+            </div>
+            <div>
+              <div
+                class="flex flex-col h-full p-2 hover:bg-white transition-colors"
+              >
+                <img
+                  class="w-10 h-auto"
+                  src="./assets/svg/icon-pago.svg"
+                  alt="Icono de pago azul"
+                />
+                <p class="font-bold text-md">Saldo a favor:</p>
+                <p class="font-medium">25$</p>
+                <p>150,00 Bs</p>
               </div>
-              <div>
-                <div
-                  class="flex flex-col p-2 bg-amber-100 hover:bg-white transition-colors h-full"
-                >
-                  <img
-                    class="w-10 h-auto"
-                    src="./assets/svg/icon-pago.svg"
-                    alt="Icono de pago azul"
-                  />
-                  <p class="font-bold text-md">Total a pagar:</p>
-                  <p class="font-medium">25$</p>
-                  <p>150,00 Bs</p>
-                </div>
+            </div>
+            <div>
+              <div
+                class="flex flex-col p-2 bg-amber-100 hover:bg-white transition-colors h-full"
+              >
+                <img
+                  class="w-10 h-auto"
+                  src="./assets/svg/icon-pago.svg"
+                  alt="Icono de pago azul"
+                />
+                <p class="font-bold text-md">Total a pagar:</p>
+                <p class="font-medium">25$</p>
+                <p>150,00 Bs</p>
               </div>
+            </div>
 
-              <div class="bg-blue-700 text-white h-full rounded-r-lg">
-                <button class="w-full h-full px-4">Procesar Pago</button>
-              </div>
+            <div class="bg-blue-700 text-white h-full rounded-b-lg">
+              <button class="w-full h-full p-5">Procesar Pago</button>
             </div>
           </div>
         </div>
+      </div>
       </section>
     </main>
   </body>
