--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="inline-flex w-full space-x-4">
               <div class="flex flex-col w-full space-y-5">
                 <form
-                class="flex items-start space-x-4 bg-white w-fit  px-4 py-3 rounded-3xl"
+                class="flex items-start justify-around space-x-4 bg-white w-full  px-4 py-3 rounded-3xl"
               >
                 <div class="inline-flex flex-col w-fit">
                   <span class="block m-auto">Forma de Pago</span>
@@ -390,143 +390,36 @@
                   <thead class="">
                     <tr class="bg-gray-200 h-10  overflow-auto">
                       <th class="px-2 font-medium">Factura</th>
-                      <th class="px-2 font-medium">Contrato</th>
-                      <th class="px-2 font-medium">Plan</th>
-                      <th class="px-2 font-medium">PON</th>
-                      <th class="px-2 font-medium">Dirección</th>
-                      <th class="px-2 font-medium">Estatus</th>
-                      <th class="px-2 font-medium">Fecha Emisión</th>
-                      <th class="px-2 font-medium">Cuentas por Cobrar</th>
-                      <th class="px-2 font-medium">Crédito</th>
-                      <th class="px-2 font-medium">Total</th>
+                      <th class="px-2 font-medium">Monto</th>
+                      <th class="px-2 font-medium">Forma de Pago</th>
+                      <th class="px-2 font-medium">Banco</th>
+                      <th class="px-2 font-medium">Referencia</th>
+                      <th class="px-2 font-medium">Moneda</th>
+                      <th class="px-2 font-medium">Accion</th>
                     </tr>
                   </thead>
                   <tbody class="overflow-auto divide-y divide-gray-200 text-[13px]">
-                    <!--                   <tr class="hover:bg-gray-100  ">
+                    <tr class="hover:bg-gray-100     ">
                       <td>0007542</td>
+                      <td>25$ / 125,00 Bs.</td>
+                      <td>Dolares</td>
+                      <td>Venezuela</td>
                       <td>000784</td>
-                      <td>50M</td>
-                      <td>12452355</td>
-                      <td>Calle 68 entre av 17 y 18...</td>
                       <td>
-                        <span class="bg-[#4BDE97] font-semibold rounded-full p-2 px-5 text-white"
-                          >Habilitado</span
-                        >
+                        Dolares
                       </td>
-                      <td>16/11/2021</td>
-                      <td>
-                        <div>
-                          <p>US$25</p>
-                          <p>Bs. 125.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$5</p>
-                          <p>Bs. 25.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$20</p>
-                          <p>Bs. 100.00</p>
-                        </div>
-                      </td>
+                      <td class="py-1"><button><img src="./assets/svg/action.svg"/></button></td>
                     </tr>
-                    <tr class="hover:bg-gray-100  ">
+                    <tr class="hover:bg-gray-100 ">
                       <td>0007542</td>
+                      <td>25$ / 125,00 Bs.</td>
+                      <td>Dolares</td>
+                      <td>Venezuela</td>
                       <td>000784</td>
-                      <td>50M</td>
-                      <td>12452355</td>
-                      <td>Calle 68 entre av 17 y 18...</td>
                       <td>
-                        <span class="bg-[#4BDE97] font-semibold rounded-full p-2 px-5 text-white"
-                          >Habilitado</span
-                        >
+                        Dolares
                       </td>
-                      <td>16/11/2021</td>
-                      <td>
-                        <div>
-                          <p>US$25</p>
-                          <p>Bs. 125.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$5</p>
-                          <p>Bs. 25.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$20</p>
-                          <p>Bs. 100.00</p>
-                        </div>
-                      </td>
-                    </tr> -->
-                    <tr class="hover:bg-gray-100    ">
-                      <td>0007542</td>
-                      <td>000784</td>
-                      <td>50M</td>
-                      <td>12452355</td>
-                      <td>Calle 68 entre av 17 y 18...</td>
-                      <td>
-                        <span
-                          class="bg-[#4BDE97] font-semibold rounded-full p-2 px-5 text-white"
-                          >Habilitado</span
-                        >
-                      </td>
-                      <td>16/11/2021</td>
-                      <td>
-                        <div>
-                          <p>US$25</p>
-                          <p>Bs. 125.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$5</p>
-                          <p>Bs. 25.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$20</p>
-                          <p>Bs. 100.00</p>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr class="hover:bg-gray-100  ">
-                      <td>0007542</td>
-                      <td>000784</td>
-                      <td>50M</td>
-                      <td>12452355</td>
-                      <td>Calle 68 entre av 17 y 18...</td>
-                      <td>
-                        <span
-                          class="bg-[#4BDE97] font-semibold rounded-full p-2 px-5 text-white"
-                          >Habilitado</span
-                        >
-                      </td>
-                      <td>16/11/2021</td>
-                      <td>
-                        <div>
-                          <p>US$25</p>
-                          <p>Bs. 125.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$5</p>
-                          <p>Bs. 25.00</p>
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <p>US$20</p>
-                          <p>Bs. 100.00</p>
-                        </div>
-                      </td>
+                      <td class="py-1"><button><img src="./assets/svg/action.svg"/></button></td>
                     </tr>
                   </tbody>
                 </table>
